Fix issue with first NavLink outline being hidden under title

--- a/packages/frontend/src/features/Header/components/Navigation/index.module.css
+++ b/packages/frontend/src/features/Header/components/Navigation/index.module.css
@@ -68,6 +68,12 @@
     left: 0;
 }
 
+.drawer-content {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
 .drawer-body {
     padding: 0px;
 }
